<resources>

    <string name="app_name">PPE</string>
    <!--Login-->
    <string name="title_login">Bron\'Connect</string>
    <string name="name_login">Name</string>
    <string name="password_login">Password</string>
    <string name="button_login">Sign In</string>
    <!--Home Navigation Drawer-->
    <string name="nav_profile">Profile</string>
    <string name="nav_tutorial">Tutorial</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_bluetooth">Bluetooth</string>
    <string name="nav_logout">Log Out</string>
    <string name="nav_test">Test</string>
    <string name="nav_test_bdd">Test BDD</string>
    <string name="nav_refresh">Refresh</string>
    <string name="nav_clear">Clear BDD</string>
    <!--Home PagerAdapter-->
    <string name="home_doses">Doses</string>
    <string name="home_graphics">Consumption</string>
    <!--Main Menu-->
    <string name="home_count">Doses</string>
    <string name="home_charts">Charts</string>
    <string name="home_bdd">BDD</string>
    <!--Menu Settings-->
    <string name="menu_settings_languages">Languages</string>
    <string name="menu_settings_notifications">Notifications</string>
    <string name="menu_settings_admin">Admin</string>
    <!--Admin-->
    <string name="view_users">VIEW ALL USERS</string>
    <string name="search_an_user">SEARCH AN USER</string>
    <string name="delete_an_user">DELETE AN USER</string>
    <string name="clear_data">CLEAR ALL USERS</string>
    <string name="add_user">ADD AN USER</string>
    <string name="enter_name">Name</string>
    <string name="enter_password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
