<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/nav_profile"
                app:showAsAction="never"/>
        <item
                android:id="@+id/nav_tutorial"
                android:icon="@drawable/ic_build_black_24dp"
                android:title="@string/nav_tutorial"
                app:showAsAction="never"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_settings"
                app:showAsAction="never"/>
        <item
                android:id="@+id/nav_bluetooth"
                android:icon="@drawable/ic_bluetooth_black_24dp"
                android:title="@string/nav_bluetooth"
                app:showAsAction="never"/>

        <item
                android:id="@+id/nav_admin"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="Administration"
                app:showAsAction="never"/>

        <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_notifications_black_24dp"
                android:title="Notifications"
                app:showAsAction="never"/>

        <item
                android:id="@+id/nav_disconnect"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/nav_logout"
                app:showAsAction="never"/>

    </group>
</menu>