<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_settings_languages"
            android:orderInCategory="100"
            android:title="@string/menu_settings_languages"
            app:showAsAction="never"
            android:icon="@drawable/ic_language_black_24dp"/>
    <item
            android:id="@+id/menu_settings_notifications"
            android:orderInCategory="100"
            android:title="@string/menu_settings_notifications"
            app:showAsAction="never"
            android:icon="@drawable/ic_notifications_black_24dp"/>
    <item
            android:id="@+id/menu_settings_admin"
            android:orderInCategory="100"
            android:title="@string/menu_settings_admin"
            app:showAsAction="never"
            android:icon="@drawable/ic_info_black_24dp"/>
</menu>