<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:orientation="vertical">
    <TextView
            android:text="@string/title_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/title_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
    <EditText
            android:hint="@string/email_login"
            android:gravity="center"
            android:background="@drawable/borders"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/title_login"
            android:layout_marginTop="100dp"
            android:id="@+id/email_login"
            android:singleLine="false"
            android:selectAllOnFocus="false"/>
    <EditText
            android:hint="@string/password_login"
            android:gravity="center"
            android:background="@drawable/borders"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/email_login"
            android:layout_marginTop="20dp"
            android:id="@+id/password_login"
            android:selectAllOnFocus="false"
            android:singleLine="false"/>
    <Button
            android:text="@string/button_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/password_login"
            android:layout_marginTop="20dp"
            android:id="@+id/button_login"
            android:onClick="connect"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
</RelativeLayout>